[package]
name = "multi-semaphore"
version = "0.1.3"
authors = ["The Rust Project Developers", "Invenia Technical Computing", "Eric Davies <iamed2@gmail.com>", "Daniel Zwell <devel@zwell.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lefth/multi-semaphore"
homepage = "https://github.com/lefth/multi-semaphore"
documentation = "https://lefth.github.io/multi-semaphore"
readme = "README.md"
keywords = ["sync"]
description = """
A counting, blocking sempahore extracted from rust 1.7.0 and modified to allow waiting for more than one resource count.
"""

[dependencies]
